{
    "name": "InputSistem",
    "maps": [
        {
            "name": "Player",
            "id": "17f0a1dd-fd3e-4d9a-a03f-591ab252a213",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "4e185188-c1b3-453f-95d1-9a7a4fcf7f0e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveOnLadder",
                    "type": "Value",
                    "id": "d1177557-a6a2-4913-8786-1c7f31d27fc9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "ad047327-dcb1-4e17-bd16-130decb1a620",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Descent",
                    "type": "Button",
                    "id": "1707e023-30b4-4b1e-8254-622bbdf36d65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hide",
                    "type": "Button",
                    "id": "8ae5d4f2-1fc5-4828-9c57-221f30457fc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Open",
                    "type": "Button",
                    "id": "886fa801-1b3e-4130-9495-566d5bd7fe0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AddItem",
                    "type": "Button",
                    "id": "a8af0fb8-b4ae-40b4-977c-1ee96ca3e8f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Climb Ladder",
                    "type": "Button",
                    "id": "6700cf72-05c0-4faf-87d8-db7f92ee6b08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sell",
                    "type": "Button",
                    "id": "fa0b20fe-f187-40d8-8829-70b9a88049f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BreakingDoor",
                    "type": "Button",
                    "id": "324e70c0-253f-4153-b9df-c6ca01838043",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CutWires",
                    "type": "Button",
                    "id": "5c1f944a-278d-4450-a880-74904188b28c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "92514465-3a67-4384-ade9-07c43086fc45",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "21e991a3-611e-4873-983e-fc3f7e968dd9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "b193ae87-216a-49c8-aaa9-bcf915849142",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "f3277ee2-6f57-4357-a72d-9bb31bcfb8c0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveOnLadder",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "9c173064-f238-4ce5-b9da-20f3fd204ff8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveOnLadder",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "19408e6c-f382-4173-9de8-c487902e4864",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveOnLadder",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8966189b-6519-417e-a9da-6cdb77b38687",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d6c749a-c25d-4645-94dd-13f9cd3edccc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Descent",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "348067d7-7229-45bd-b578-b49d749a325e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Hide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "989c4ae6-1976-44f5-9b30-b82b64500d1e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1848059e-b9ad-4d1b-9be6-40a41121c953",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "AddItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "635a93e6-0850-4efe-9e15-9aa9d406bcfc",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Climb Ladder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c508538-8941-49a5-b410-8dfe5f10d00d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Sell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8cdf22e-be77-42f3-aef2-0e6496f88cdc",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BreakingDoor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cc2a179-d3ec-4711-9e5a-cb760e692f66",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "CutWires",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "febdb0cc-a24e-424e-b91f-a4aa44c3e2f1",
            "actions": [
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "6c6bdee5-80d1-47e9-883e-43f6dea29215",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d508eaf0-fee8-414d-bbb1-e8c3f42c47a4",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Tool",
            "id": "664e02c5-fe1a-4845-9f84-c9c8b8fd775d",
            "actions": [
                {
                    "name": "ChoiсeUp",
                    "type": "Button",
                    "id": "2b2db287-47bf-4928-b95c-98eaa14ed6b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChoiсeDown",
                    "type": "Button",
                    "id": "a3f58cb2-9309-4be1-8dda-b824d01a8105",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4f36e04-ee21-49c0-9d64-a11314eedb7d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChoiсeUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4592542a-edbe-46a3-9e0e-3426fc0273b8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChoiсeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TurnSrew",
            "id": "0c3664ca-fba3-4e65-b61b-322cd35440cc",
            "actions": [
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "d7d967af-fd63-4227-bb47-8454c2791055",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "fcc5831e-25d2-4b4a-9d52-3697289b9d23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Breaking",
                    "type": "Button",
                    "id": "f50d95e2-8bab-4847-932b-f00dd1e9c717",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "df69ad7f-e2ff-47d8-83e5-1e1bcaa38cdd",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "443f28d4-9016-443e-bc18-e351887150c2",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abfa6245-2c23-4dc7-9b33-0bea5dc42961",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Breaking",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Safe",
            "id": "e52e1798-8642-4db5-8659-61ab01106026",
            "actions": [
                {
                    "name": "Open",
                    "type": "Value",
                    "id": "e876c697-dc49-4f4b-a0c2-6347c5005a6f",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "efe1b8fb-ab30-4db5-aa88-573449b32a7c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd3df7cd-d014-489f-94f8-dfe0adda4ffb",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce8b726a-854b-4cf5-932b-4a4d9804a292",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "baadbf93-d545-43d9-b731-8671575fe657",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a44b934-6c25-4c9f-a876-bdaf1d9ca545",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee074c34-f9b5-4673-acf6-6acd968a886b",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aeeac83c-2c7e-4d6e-a54a-9c49a444fea3",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ba1fa60-6f34-4661-a775-0f2218bbf0cb",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e70e1bdd-0c8a-4e2f-a1a8-3dcdbf1e8242",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abbf328a-e22c-48d7-8b98-112b29acef4e",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Shop",
            "id": "4cd42c53-2721-468e-a4c5-ef9125a36836",
            "actions": [
                {
                    "name": "Open",
                    "type": "Button",
                    "id": "d12b585e-d54a-4264-96ae-b292d2cc7ed1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectLeft",
                    "type": "Button",
                    "id": "41da89b8-0457-4f9d-8709-7e9ab4db8d26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectRight",
                    "type": "Button",
                    "id": "85b75f98-b5e6-49d2-8f9b-a12e21a98ebb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sell",
                    "type": "Button",
                    "id": "bc39daa5-a92f-49cb-b78a-cb66941abbd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "958eca66-00ca-46c6-8c88-5b4021fe6444",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2bf24bd-d085-4080-85f6-cbb2accf2e4a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SelectLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbfc5efa-315d-4473-bb8d-315f8e3be599",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SelectRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cecd2ae6-9053-4541-b955-eb4c3d21e2b2",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Sell",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}